--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ html,body{
     overflow:hidden;
 }
 .main-image{
+    position : fixed;
     min-height:100%;
     min-width:100%;
     height:auto;
@@ -12,6 +13,12 @@ html,body{
     top:-100%; bottom:-100%;
     left:-100%; right:-100%;
     margin:auto;
+}
+.infobox{
+    position : fixed;
+    z-index: 5;
+    background-color : black;
+    color : grey;
 }
 .arrow{
   position : fixed;
