--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,10 @@ html,body{
     margin:0;
     height:100%;
     overflow:hidden;
+    background-color:black;
 }
 .main-image{
     position : fixed;
-    min-height:100%;
-    min-width:100%;
-    height:auto;
     width:auto;
     position:absolute;
     top:-100%; bottom:-100%;
